[package]
name = "pv"
version = "0.8.16"
edition = "2021"
description = "Pressure Valve — intelligent process lifecycle management"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = { version = "0.4", features = ["std"] }

[profile.release]
opt-level = 2
strip = true
